# kitabay.com

./: .env  pyproject.toml  render.yaml  requirements.txt  start.sh  vercel.json
inter-frontend folder/: vercel.json
inter-frontend folder/css_folder/: forgot_pass.css  home.css  index.css  insert_product.css  log_in.css  password.css  practice.css  sign.css  verifyotp.css
inter-frontend folder/html_folder/: forgot_pass.html  home.html  index.html  insert_product.html  practice.html  verify_otp.html
inter-frontend folder/javascript_folder/: content.mjs  forgot_pass.js  home.js  index.js  insert_product.js  log_in.js  password.js  practice.js
inter-frontend-folder/css_folder/: forgot_pass.css  home.css  index.css  insert_product.css  verifyotp.css
inter-frontend-folder/html_folder/: forgot_pass.html  home.html  index.html  insert_product.html  log_in.html  password.html  sign.html  verify_otp.html
inter-frontend-folder/javascript_folder/: home.js  insert_product.js  password.js  sign.js  verifyotp.js
intern-backend folder/backend/: .env  pyproject.toml  vercel.json
intern-backend folder/backend/mains/: main.py
intern-backend folder/backend/mains/config/: db.py
intern-backend folder/backend/mains/model/: sign.py
intern-backend-folder/backend/: .env
intern-backend-folder/backend/mains/: main.py
intern-backend-folder/backend/mains/config/: db.py
intern-backend-folder/backend/mains/model/: sign.py
intern-backend/backend/: pyproject.toml
intern-backend/backend/mains/: main.py
intern-backend/backend/mains/config/: db.py
intern_backend_folder/backend/mains/: main.py
intern_backend_folder/backend/mains/config/: db.py
intern_backend_folder/backend/mains/model/: db_models.py  sign.py
intern_backend_folder/backend/mains/utils/: utils_helper.py
static/: Procfile
static/css_folder/: index.css  insert_product.css  log_in.css  password.css  sign.css
static/html_folder/: forgot_pass.html  index.html  insert_product.html  loader.html  log_in.html  otp.html  password.html  practice.html  sign.html  verify_otp.html
static/javascript_folder/: forgot_pass.js  index.js  insert_product.js  log_in.js  password.js  sign.js  verifyotp.js
