[tool.poetry]
name = "intern_backend_folder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "backend/mains", from = "intern_backend_folder" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"
aiohttp = "^3.9.5"
phonenumbers = "^8.13.40"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"
bcrypt = "4.0.1"
mysqlclient = "^2.2.4"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.31"
cryptography = "^43.0.0"
python-multipart = "^0.0.9"
alembic = "^1.13.2"
pathlib = "^1.0.1"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
gunicorn = "^23.0.0"
supabase = "^2.13.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-jose = "^3.4.0"
requests = "^2.32.3"

[tool.poetry.scripts]
dev="intern_backend_folder.backend.mains.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
