[tool.poetry]
name = "mains"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"
requests = "^2.32.3"
aiohttp = "^3.9.5"
phonenumbers = "^8.13.40"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"
bcrypt = "4.0.1"

[tool.poetry.scripts]
dev="mains.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
